# todolist

./: pyproject.toml
backend/app/: app.py  config.py  models.py
backend/app/db/: database.py  models.py
backend/app/services/: user_crud.py  utils.py
frontend/svelte-app/: package-lock.json  package.json
frontend/svelte-app/public/: global.css  index.html
frontend/svelte-app/src/: App.svelte  SignIn.svelte  UserPage.svelte  main.js
frontend/svelte-app/src/components/: SignInForm.svelte  SignUpForm.svelte  UserMenu.svelte  iconButton.svelte  statusItem.svelte
frontend/svelte-app/src/components/Archives/: Archive.svelte
frontend/svelte-app/src/components/CommonCalendar/: Calendar.svelte  CommonCalendar.svelte  Date.svelte  TimeSelector.svelte
frontend/svelte-app/src/components/Diaries/: Diaries.svelte  DiaryCover.svelte  ToDoList.svelte
frontend/svelte-app/src/components/Item/: DayItems.svelte  EditItem.svelte  ToDoItem.svelte  childItem.svelte
frontend/svelte-app/src/components/notices/: AddFriendMessage.svelte  GetCaseMessage.svelte  JoinGroupMessage.svelte  Message.svelte  Notice.svelte  User.svelte
